@@ -1,5 +1,5 @@
 Name:			agum
-Version:		2.7
+Version:		2.8
 Maintainer:		ramsdell@mitre.org
 Cabal-Version:		>= 1.6
 License:		GPL
@@ -19,7 +19,7 @@ Build-Type:		Simple
 Extra-Source-Files:	readme.txt ChangeLog Makefile
 
 Library
-  Build-Depends:	base >= 3 && < 5, containers >= 0.3
+  Build-Depends:	base >= 4.13 && < 5, containers >= 0.3
   Exposed-Modules:	Algebra.AbelianGroup.UnificationMatching
                         Algebra.AbelianGroup.IntLinEq
   Hs-Source-Dirs:	src
@@ -28,7 +28,7 @@ Library
 
 Executable agum
   Main-Is:		Algebra/AbelianGroup/Main.hs
-  Build-Depends:	base >= 3 && < 5, containers >= 0.3
+  Build-Depends:	base >= 4.13 && < 5, containers >= 0.3
   Other-Modules:	Algebra.AbelianGroup.UnificationMatching
                         Algebra.AbelianGroup.IntLinEq
   Hs-Source-Dirs:	src
